--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,17 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-v13:21.0.0'
     compile files('libs/activeandroid-3.0.jar')
+    compile 'com.shamanland:fab:0.0.5'
 }
 
