add workout on edit mode, fixed theme colors,workout now button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:targetSdkVersion="21" />
 
     <application
+        android:debuggable="true"
         android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
