--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.shamanland:fab:0.0.5'
-    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
-    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+
+//    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+//    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+//    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
 }
 
 
