--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,14 @@ android {
 
     defaultConfig {
         applicationId "com.sqvat.squat"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
+            apply plugin: 'java'
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -31,6 +32,11 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.shamanland:fab:0.0.5'
+
+//    compile ("com.doomonafireball.betterpickers:library:1.5.2") {
+//        exclude group: 'com.android.support', module: 'support-v4'
+//        exclude group: 'com.android.support', module: 'support-v13'
+//    }
 
 //    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
 //    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
