--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,14 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.shamanland:fab:0.0.5'
-
-//    compile ("com.doomonafireball.betterpickers:library:1.5.2") {
-//        exclude group: 'com.android.support', module: 'support-v4'
-//        exclude group: 'com.android.support', module: 'support-v13'
-//    }
-
-//    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
-//    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
-//    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
+    //    compile ("com.doomonafireball.betterpickers:library:1.5.2") {
+    //        exclude group: 'com.android.support', module: 'support-v4'
+    //        exclude group: 'com.android.support', module: 'support-v13'
+    //    }
+    //    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+    //    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+    //    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
+    compile project(':seekArc_library')
 }
 
 
