--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.shamanland:fab:0.0.5'
+    compile 'com.rengwuxian.materialedittext:library:1.7.1'
     //    compile ("com.doomonafireball.betterpickers:library:1.5.2") {
     //        exclude group: 'com.android.support', module: 'support-v4'
     //        exclude group: 'com.android.support', module: 'support-v13'
