--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     //    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     //    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
     //    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
-    compile project(':seekArc_library')
+//    compile project(':seekArc_library')
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
 
 
