--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:value="1" />
 
         <activity
-            android:name=".BaseActivity"
+            android:name=".activities.BaseActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,35 +30,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ChooseExerciseActivity"
+            android:name=".activities.ChooseExerciseActivity"
             android:label="@string/title_activity_add_session" >
         </activity>
         <activity
-            android:name=".ExerciseActivity"
+            android:name=".activities.ExerciseActivity"
             android:label="@string/title_activity_exercise"
-            android:parentActivityName=".ChooseExerciseActivity" >
+            android:parentActivityName=".activities.ChooseExerciseActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.sqvat.squat.ChooseExerciseActivity" />
+                android:value=".activities.ChooseExerciseActivity" />
         </activity>
         <activity
-            android:name=".ConfigSessionActivity"
+            android:name=".activities.ConfigSessionActivity"
             android:label="@string/title_activity_config_session" >
         </activity>
         <activity
-            android:name=".TrackWorkoutAct"
+            android:name=".activities.TrackWorkoutAct"
             android:label="@string/title_activity_track_workut" >
         </activity>
         <activity
-            android:name=".DetailedHistoryAct"
+            android:name=".activities.DetailedHistoryAct"
             android:label="@string/title_activity_detailed_history" >
         </activity>
         <activity
-            android:name=".AddSessionAct"
-            android:label="@string/title_activity_add_session" >
-        </activity>
-        <activity
-            android:name=".EditRoutineAct"
+            android:name=".activities.EditRoutineAct"
             android:label="@string/title_activity_edit_routine" >
         </activity>
     </application>
