--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     //    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
 //    compile project(':seekArc_library')
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.jpardogo.materialtabstrip:library:1.0.6'
+    compile 'com.jakewharton:butterknife:6.0.0'
 }
 
 
