bug fixes, improvments, added sound on rest finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,14 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
@@ -55,6 +63,14 @@
         <activity
             android:name=".activities.EditRoutineAct"
             android:label="@string/title_activity_edit_routine" >
+        </activity>
+        <activity
+            android:name=".activities.AddCustomExerciseActivity"
+            android:label="@string/title_activity_add_custom_exercise"
+            android:parentActivityName=".activities.ChooseExerciseActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sqvat.squat.activities.ChooseExerciseActivity" />
         </activity>
     </application>
 
