--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.1.0'
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "com.sqvat.squat"
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/activeandroid-3.0.jar')
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
@@ -39,10 +39,9 @@ dependencies {
     //    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     //    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
     //    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
-//    compile project(':seekArc_library')
+    //    compile project(':seekArc_library')
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.jpardogo.materialtabstrip:library:1.0.6'
-    compile 'com.jakewharton:butterknife:6.0.0'
 }
 
 
