--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
 
         <activity
             android:name=".activities.BaseActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,36 +39,43 @@
         </activity>
         <activity
             android:name=".activities.ChooseExerciseActivity"
-            android:label="@string/title_activity_add_session" >
+            android:label="@string/title_activity_add_session"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activities.ExerciseActivity"
             android:label="@string/title_activity_exercise"
-            android:parentActivityName=".activities.ChooseExerciseActivity" >
+            android:parentActivityName=".activities.ChooseExerciseActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.ChooseExerciseActivity" />
         </activity>
         <activity
             android:name=".activities.ConfigSessionActivity"
-            android:label="@string/title_activity_config_session" >
+            android:label="@string/title_activity_config_session"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activities.TrackWorkoutAct"
-            android:label="@string/title_activity_track_workut" >
+            android:label="@string/title_activity_track_workut"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activities.DetailedHistoryAct"
-            android:label="@string/title_activity_detailed_history" >
+            android:label="@string/title_activity_detailed_history"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activities.EditRoutineAct"
-            android:label="@string/title_activity_edit_routine" >
+            android:label="@string/title_activity_edit_routine"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activities.AddCustomExerciseActivity"
-            android:label="@string/title_activity_add_custom_exercise"
-            android:parentActivityName=".activities.ChooseExerciseActivity" >
+            android:label="Add custom exercise"
+            android:parentActivityName=".activities.ChooseExerciseActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sqvat.squat.activities.ChooseExerciseActivity" />
