fixed and added icons, fixed nav drawer, fixed spaces problems, bug fixes, fixed the colors, removed some unused stuff now super stable Reps for fucking jesus 2.!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     //    compile project(':seekArc_library')
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.jpardogo.materialtabstrip:library:1.0.6'
+    compile 'com.squareup.picasso:picasso:2.4.0'
 }
 
 
