--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:support-v13:21.0.0'
-    compile 'com.shamanland:fab:0.0.5'
+    compile 'com.shamanland:fab:0.0.7'
     compile 'com.rengwuxian.materialedittext:library:1.7.1'
     //    compile ("com.doomonafireball.betterpickers:library:1.5.2") {
     //        exclude group: 'com.android.support', module: 'support-v4'
@@ -43,6 +43,9 @@ dependencies {
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.jpardogo.materialtabstrip:library:1.0.6'
     compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+
 }
 
 
