--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <android:uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -32,7 +32,7 @@
         <activity
             android:name=".activities.BaseActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,13 +42,13 @@
         <activity
             android:name=".activities.ChooseExerciseActivity"
             android:label="@string/title_activity_add_session"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.ExerciseActivity"
             android:label="@string/title_activity_exercise"
             android:parentActivityName=".activities.ChooseExerciseActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.ChooseExerciseActivity" />
@@ -56,31 +56,35 @@
         <activity
             android:name=".activities.ConfigSessionActivity"
             android:label="@string/title_activity_config_session"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.TrackWorkoutAct"
             android:label="@string/title_activity_track_workut"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.DetailedHistoryAct"
             android:label="@string/title_activity_detailed_history"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.EditRoutineAct"
             android:label="@string/title_activity_edit_routine"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.AddCustomExerciseActivity"
             android:label="Add custom exercise"
             android:parentActivityName=".activities.ChooseExerciseActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sqvat.squat.activities.ChooseExerciseActivity" />
+        </activity>
+        <activity
+            android:name=".activities.UpdateSessionActivity"
+            android:label="@string/title_activity_update_session" >
         </activity>
     </application>
 
