--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sqvat.fit" >
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.sqvat.fit"
+    android:versionCode="2"
+    android:versionName="1.1">
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -30,6 +33,8 @@
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name="com.sqvat.fit.activities.BaseActivity"
