--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.sqvat.squat"
         minSdkVersion 17
         targetSdkVersion 21
-        versionCode 2
-        versionName "1.01"
+        versionCode 4
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.shamanland:fab:0.0.7'
     compile 'com.rengwuxian.materialedittext:library:1.8.2'
+    compile 'com.afollestad:material-dialogs:0.6.2.3'
     //    compile ("com.doomonafireball.betterpickers:library:1.5.2") {
     //        exclude group: 'com.android.support', module: 'support-v4'
     //        exclude group: 'com.android.support', module: 'support-v13'
