--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sqvat.fit"
-    android:versionCode="2"
+    android:versionCode="4"
     android:versionName="1.1">
 
     <uses-sdk
@@ -33,8 +33,11 @@
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
+            android:value="@string/app_id" />
         <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
+
 
         <activity
             android:name="com.sqvat.fit.activities.BaseActivity"
@@ -49,7 +52,13 @@
         <activity
             android:name="com.sqvat.fit.activities.ChooseExerciseActivity"
             android:label="@string/title_activity_add_session"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
         </activity>
         <activity
             android:name="com.sqvat.fit.activities.ExerciseActivity"
