--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,15 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sqvat.squat"
-    android:versionCode="4"
-    android:versionName="1.1">
+    android:versionCode="6"
+    android:versionName="1.12">
 
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -32,7 +33,7 @@
             android:value="squat.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="1" />
+            android:value="3" />
         <meta-data android:name="com.google.android.gms.games.APP_ID"
             android:value="@string/app_id" />
         <meta-data android:name="com.google.android.gms.version"
